--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
